--- a/Account/register.html
+++ b/Account/register.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-page</title>
-    <link rel="stylesheet" type="text/css" href="/index.css">
+    <link rel="stylesheet" type="text/css" href="../index.css">
 </head>
 
 <body>
@@ -14,9 +14,9 @@
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="/Account/register.html">ACCOUNT</a></li>
-                    <li><a href="/aboutUs.html">ABOUT</a></li>
-                    <li><a href="/ourservices.html">OUR SERVICES</a></li>
+                    <li><a href="#">ACCOUNT</a></li>
+                    <li><a href="../nav/aboutUs.html">ABOUT</a></li>
+                    <li><a href="../nav/ourservices.html">OUR SERVICES</a></li>
                     <li><a href="/index.html">HOME</a></li>
                 </ul>
             </nav>
@@ -45,7 +45,7 @@
                 <button type="submit">register</button>
 
             </form>
-            <p>Already have an Account <a href="/Account/login.html"><strong>Login Here</strong></a></p>
+            <p>Already have an Account <a href="login.html"><strong>Login Here</strong></a></p>
         </div>
     </div>
     <div id="footer">
