--- a/nav/aboutUs.html
+++ b/nav/aboutUs.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-Us</title>
 </head>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="../index.css">
 
 <body>
     <div class="container">
@@ -15,9 +15,9 @@
             <nav>
                 <ul>
                     <li><a href="/Account/register.html">ACCOUNT</a></li>
-                    <li><a href="/aboutUs.html">ABOUT</a></li>
-                    <li><a href="/ourservices.html">OUR SERVICES</a></li>
-                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="ourservices.html">OUR SERVICES</a></li>
+                    <li><a href="index.html">HOME</a></li>
                 </ul>
             </nav>
         </div>
