modify register routes

--- a/nav/aboutUs.html
+++ b/nav/aboutUs.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="/Account/register.html">ACCOUNT</a></li>
+                    <li><a href="../Account/register.html">ACCOUNT</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="ourservices.html">OUR SERVICES</a></li>
                     <li><a href="index.html">HOME</a></li>
