--- a/nav/ourservices.html
+++ b/nav/ourservices.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="/Account/register.html">ACCOUNT</a></li>
+                    <li><a href="../Account/register.html">ACCOUNT</a></li>
                     <li><a href="aboutUs.html">ABOUT</a></li>
                     <li><a href="#">OUR SERVICES</a></li>
                     <li><a href="../index.html">HOME</a></li>
