--- a/Account/register.html
+++ b/Account/register.html
@@ -17,7 +17,7 @@
                     <li><a href="#">ACCOUNT</a></li>
                     <li><a href="../nav/aboutUs.html">ABOUT</a></li>
                     <li><a href="../nav/ourservices.html">OUR SERVICES</a></li>
-                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="../index.html">HOME</a></li>
                 </ul>
             </nav>
         </div>
