--- a/Account/login.html
+++ b/Account/login.html
@@ -16,10 +16,10 @@
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="/Account/register.html">ACCOUNT</a></li>
-                    <li><a href="/aboutUs.html">ABOUT</a></li>
-                    <li><a href="/ourservices.html">OUR SERVICES</a></li>
-                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="register.html">ACCOUNT</a></li>
+                    <li><a href="../nav/aboutUs.html">ABOUT</a></li>
+                    <li><a href="../nav/ourservices.html">OUR SERVICES</a></li>
+                    <li><a href="../index.html">HOME</a></li>
                 </ul>
             </nav>
         </div>
