modify login page

--- a/Account/login.html
+++ b/Account/login.html
@@ -33,7 +33,7 @@
             <label>
                 <input type="checkbox" checked="checked" name="remember">Remember me
             </label>
-            <p>Dont have an Account <a href="register.html"><strong>Register</strong></a></p>
+            <p>Don't have an Account <a href="register.html"><strong>Register</strong></a></p>
 
         </div>
         <div id="footer">
