fix back the footer

--- a/Account/login.html
+++ b/Account/login.html
@@ -37,7 +37,7 @@
 
         </div>
         <div id="footer">
-            <p>copyright @2021 Vincent Kipkirui</p>
+            <p>copyright &cp;2021 Vincent Kipkirui</p>
         </div>
 
     </div>
