--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </article>
         </div>
         <div id="footer">
-            <p>copyright @2021. Developed with passion by <a href="#top">Vincent Kipkirui</a> </p>
+            <p>copyright &cp;2021. Developed with passion by <a href="#top">Vincent Kipkirui</a> </p>
         </div>
     </div>
 
