--- a/Account/register.html
+++ b/Account/register.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div id="footer">
-        <p>copyright @2021 Vincent Kipkirui</p>
+        <p>copyright &cp;2021 Vincent Kipkirui</p>
     </div>
 
 
