--- a/nav/aboutUs.html
+++ b/nav/aboutUs.html
@@ -39,7 +39,7 @@
             </p>
         </div>
         <div id="footer">
-            <p>copyright @2021 Vincent Kipkirui</p>
+            <p>copyright &cp;2021 Vincent Kipkirui</p>
         </div>
     </div>
 </body>
