--- a/nav/ourservices.html
+++ b/nav/ourservices.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <div id="footer">
-            <p>copyright @2021 Vincent Kipkirui</p>
+            <p>copyright &cp;2021 Vincent Kipkirui</p>
         </div>
 
 
