--- a/nav/aboutUs.html
+++ b/nav/aboutUs.html
@@ -17,7 +17,7 @@
                     <li><a href="../Account/register.html">ACCOUNT</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="ourservices.html">OUR SERVICES</a></li>
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="../index.html">HOME</a></li>
                 </ul>
             </nav>
         </div>
